# auth0m2m

./: .gitignore  Cargo.toml  README.md
src/: credentials.rs  main.rs
